tests/requests/invalid/004.py
from gunicorn.ghttp.errors import InvalidHTTPVersion
request = InvalidHTTPVersion